; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_fetch.c_destruct_evp_method.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_fetch.c_destruct_evp_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evp_method_data_st = type { i32 (i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @destruct_evp_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destruct_evp_method(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.evp_method_data_st*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.evp_method_data_st*
  store %struct.evp_method_data_st* %7, %struct.evp_method_data_st** %5, align 8
  %8 = load %struct.evp_method_data_st*, %struct.evp_method_data_st** %5, align 8
  %9 = getelementptr inbounds %struct.evp_method_data_st, %struct.evp_method_data_st* %8, i32 0, i32 0
  %10 = load i32 (i8*)*, i32 (i8*)** %9, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 %10(i8* %11)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
